correction mobile

--- a/styles/DailyBestSells.module.css
+++ b/styles/DailyBestSells.module.css
@@ -17,7 +17,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   height: 60vh;
-  width: 25%;
+  
   border-radius: 0.5rem;
   padding: 1rem 1.8rem;
 }
